# linuxUtils

./: .gitignore  README.md  install  install.cpp  install.sh
clone/: CMakeLists.txt
clone/src/: main.cpp
mkfat/: CMakeLists.txt  README.md
mkfat/src/: main.cpp
qclone/: CMakeLists.txt  README.md
sdltemplate/: CMakeLists.txt  README.md
sdltemplate/src/: main.cpp
template/: CMakeLists.txt
template/src/: main.cpp
tobin/: CMakeLists.txt
tobin/src/: main.cpp
txt2pdf/: CMakeLists.txt
txt2pdf/src/: main.cpp
